lab1/Test/L1-A-3-12.output
Error Type B at Line 2
Error Type B at Line 5
Error Type B at Line 14
Error Type B at Line 16
Error Type B at Line 17
Error Type A at Line 26
