lab1/Test/L1-A-3-12.cmm
struct {
  struct A vCuj9LfK [ 151212492 ! ] = b0uUC8YvPqjpYFdmN 
    ( TL8aZu1Jt6L ) [ kD0MIyZBk ] = B9hdJKqFpO , gDKLj 
    ;
&&   int hqrMFp5Qzn0pbz [ 1048953542 ] ;
  struct {
  }a8p7wmksn2_LT6QMsZ [ 1320989664 ] = hjRVXHwjct 
    ;
  struct Y580KGoy7p6dSKx {
  }MOwkHUdteYzO1Mz [ 126686070 ] [ 2145318488 ] = 
    gnp , O4y3XvWhLenWQzb ;
}pqtimMmqOrJ7Nh ( int lxOp_ho4 [ 412173184 ] ) {
  int nv [ 1586556473 ] [ 745994084 ] [ 1786607823 
    ] = - Og9FsxZ1xDEbf1 ( Stsuh ) >= hQNONASAEU while 
    ;
  if ( - ! Qgb7jn8J_XgLp else = Tjn5YnLwAOwcO )   s9NcNVCZt7kfmdzO0KW 
    ;/ 
else   if ( yCEpi7rRcSL )   if ( ZIvXo3uCYm )   if 
    ( o6nwBzbQkC )   m1rwMREeI ;




  return - - XF1Nzyj5HmQoWDJAflp - DjfVUK_wRPN_OzwJxuE 
    + kJVCE6 && Y7 && P9YH || m4z8D7nheNKHmLHfP || Fw8kFbP 
    || YeLWO `;
}
